Step3/yamls/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-and-morty-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-and-morty
  template:
    metadata:
      labels:
        app: rick-and-morty
    spec:
      containers:
        - name: rick-and-morty
          image: igorndevops/rick_and_morty
          ports:
            - containerPort: 5000
