Step3/yamls/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-service
spec:
  selector:
    app: rick-and-morty
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
