Step3/yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-ingress
spec:
  rules:
    - host: rick-and-morty.api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rick-and-morty-service
                port:
                  number: 80
